external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_neg_inference_default.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:7:18
  │
7 │         let _x = -1;
  │                  ^^ Signed integer types are under development

warning[W04039]: unable to determine principal type for literal
  ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:7:19
  │
7 │         let _x = -1;
  │                   ^ Could not determine a concrete type for this signed numeric literal, so defaulting to 'i64'
  │
  = To avoid this warning, add an explicit type annotation, e.g., '<num>i64'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:7:19
  │
7 │         let _x = -1;
  │                   ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:12:18
   │
12 │         let _x = -(5);
   │                  ^^^^ Signed integer types are under development

warning[W04039]: unable to determine principal type for literal
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:12:20
   │
12 │         let _x = -(5);
   │                    ^ Could not determine a concrete type for this signed numeric literal, so defaulting to 'i64'
   │
   = To avoid this warning, add an explicit type annotation, e.g., '<num>i64'
   = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:12:20
   │
12 │         let _x = -(5);
   │                    ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:17:17
   │
17 │         let _x: i64 = -(-1);
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:17:23
   │
17 │         let _x: i64 = -(-1);
   │                       ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:22:18
   │
22 │         let _a = -1 + 2;
   │                  ^^^^^^ Signed integer types are under development

warning[W04039]: unable to determine principal type for literal
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:22:19
   │
22 │         let _a = -1 + 2;
   │                   ^ Could not determine a concrete type for this signed numeric literal, so defaulting to 'i64'
   │
   = To avoid this warning, add an explicit type annotation, e.g., '<num>i64'
   = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:22:19
   │
22 │         let _a = -1 + 2;
   │                   ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:27:17
   │
27 │         let _a: i64 = -1i64 * -2i64;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_neg_inference_default.move:27:23
   │
27 │         let _a: i64 = -1i64 * -2i64;
   │                       ^^^^^^^^^^^^^ Signed integer types are under development
